--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "Igor",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
     "lodash": "^4.17.21",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.1",
+    "redis": "^4.1.0"
   }
 }
